--- a/index.html
+++ b/index.html
@@ -22,23 +22,28 @@
         </div>
     </div>
 
-    <div id="">
-        
-    </div>
+        <div class="main-container">
+            <img src="img/empresa-2-e1551381652195.jpg" alt="">
+            <div id="main-text"><h1>Lideres en la comunicación</h1></div>
+        </div>
 
-    <div class="flex-container-content">
-        <img src="img/DeceptivelyDocile.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, corrupti quae? Ullam quasi cumque id nesciunt natus. Voluptatem, doloremque neque deserunt quibusdam aliquid repellat ab nulla eum vitae excepturi ipsum!</p>
-    </div>
+    <section id="content">
+        <h1>Noticias</h1>
 
-    <div class="flex-container-content">
-        <img src="img/heliocentrico.jpg" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus quibusdam consequuntur, magnam rerum architecto ducimus eum necessitatibus laborum ipsa obcaecati deleniti nobis ratione ab sit, molestiae laboriosam mollitia quam animi.</p>
-    </div>
+            <div class="flex-container-content">
+                <img src="img/DeceptivelyDocile.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, corrupti quae? Ullam quasi cumque id nesciunt natus. Voluptatem, doloremque neque deserunt quibusdam aliquid repellat ab nulla eum vitae excepturi ipsum!</p>
+            </div>
 
-    <div class="flex-container-content">
-        <img src="img/Messier_catalog_first_page.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nam quae obcaecati debitis accusamus adipisci doloremque atque iste nihil eos, voluptas minima inventore, maxime assumenda velit culpa deleniti quos necessitatibus.</p>
-    </div>
+            <div class="flex-container-content">
+                <img src="img/heliocentrico.jpg" alt="">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus quibusdam consequuntur, magnam rerum architecto ducimus eum necessitatibus laborum ipsa obcaecati deleniti nobis ratione ab sit, molestiae laboriosam mollitia quam animi.</p>
+            </div>
+
+            <div class="flex-container-content">
+                <img src="img/Messier_catalog_first_page.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nam quae obcaecati debitis accusamus adipisci doloremque atque iste nihil eos, voluptas minima inventore, maxime assumenda velit culpa deleniti quos necessitatibus.</p>
+            </div>
+        </section>
 </body>
 </html>
