--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>learningPage</title>
+    <script src="https://kit.fontawesome.com/efa8e4f2a4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="flex-container-nav">
@@ -28,7 +29,7 @@
         </div>
 
     <section id="content">
-        <h1>Noticias</h1>
+        <h1 class="main-title">Noticias</h1>
 
             <div class="flex-container-content">
                 <img src="img/DeceptivelyDocile.jpg" alt="">
@@ -45,5 +46,28 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nam quae obcaecati debitis accusamus adipisci doloremque atque iste nihil eos, voluptas minima inventore, maxime assumenda velit culpa deleniti quos necessitatibus.</p>
             </div>
         </section>
+
+        <footer class="flex-container-footer">
+            <section id="footer-form">
+                <h3>Envía tu pregunta</h3>
+                <form action="">
+                    <label for="">Nombres</label><br>
+                    <input type="text"><br>
+                    <label for="">Apellidos</label><br>
+                    <input type="text"><br>
+                    <label for="">Tu duda</label><br>
+                    <textarea name="" id="" cols="30" rows="10"></textarea><br>
+                    <button onclick="summit">Enviar</button>
+                </form>
+            </section>
+            <section id="footer-links">
+                <ul>
+                    <a href="https://www.instagram.com"><li><i class="fab fa-facebook fa-lg"></i>Instagram</li></a>
+                    <a href="https://www.facebook.com"><li><i class="fab fa-instagram fa-lg"></i>Facebook</li></a>
+                    <a href="https://www.twitter.com"><li><i class="fab fa-twitter fa-lg"></i>Twitter</li></a>
+                    <a href="https://www.youtube.com"><li><i class="fab fa-youtube fa-lg"></i>YouTube</li></a>
+                </ul>
+            </section>
+        </footer>
 </body>
 </html>
