--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </section>
             <section id="footer-links">
                 <ul>
-                    <a href="https://www.instagram.com"><li><i class="fab fa-facebook fa-lg"></i>Instagram</li></a>
-                    <a href="https://www.facebook.com"><li><i class="fab fa-instagram fa-lg"></i>Facebook</li></a>
+                    <a href="https://www.instagram.com"><li><i class="fab fa-instagram fa-lg"></i>Instagram</li></a>
+                    <a href="https://www.facebook.com"><li><i class="fab fa-facebook fa-lg"></i>Facebook</li></a>
                     <a href="https://www.twitter.com"><li><i class="fab fa-twitter fa-lg"></i>Twitter</li></a>
                     <a href="https://www.youtube.com"><li><i class="fab fa-youtube fa-lg"></i>YouTube</li></a>
                 </ul>
